--- a/plantsuwa/app/views/current_plants/show_admin.html.erb
+++ b/plantsuwa/app/views/current_plants/show_admin.html.erb
@@ -170,34 +170,37 @@
       <dt class="no-description">UWA Location</dt>
     <% end %>    
     <% if not @current_plant.location_1.blank? %>    
-      <p style="margin-bottom: 0px;"><%= @current_plant.location_1 %></p>
+      <p style="margin-bottom: 0px;"><%= @current_plant.location_1 %> (<%= @current_plant.lat1%>, <%= @current_plant.lng1 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px;">(None)</p>
     <% end %>
     <% if not @current_plant.location_2.blank? %>    
-      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_2 %></p>
+      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_2 %> (<%= @current_plant.lat2%>, <%= @current_plant.lng2 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px; margin-left: 8px">(None)</p>
     <% end %>
     <% if not @current_plant.location_3.blank? %>    
-      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_3 %></p>
+      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_3 %> (<%= @current_plant.lat3%>, <%= @current_plant.lng3 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px; margin-left: 8px">(None)</p>
     <% end %>
     <% if not @current_plant.location_4.blank? %>    
-      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_4 %></p>
+      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_4 %> (<%= @current_plant.lat4%>, <%= @current_plant.lng4 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px; margin-left: 8px">(None)</p>
     <% end %>
     <% if not @current_plant.location_5.blank? %>    
-      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_5 %></p>
+      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_5 %> (<%= @current_plant.lat5%>, <%= @current_plant.lng5 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px; margin-left: 8px">(None)</p>
     <% end %>
     <% if not @current_plant.location_6.blank? %>    
-      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_6 %></p>
+      <p style="margin-bottom: 0px; margin-left: 8px"><%= @current_plant.location_6 %> (<%= @current_plant.lat6%>, <%= @current_plant.lng6 %>)</p>
     <% else %>
       <p class="no-description" style="margin-bottom: 0px; margin-left: 8px">(None)</p>
+    <% end %>
+    <% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+      <div class="display-photo-right" id="map-canvas" style="height: 300px; margin: 10px 0"></div>
     <% end %>
 
 
@@ -322,3 +325,103 @@
 </div>
 <br/>
 <hr/>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAlFdDKUoiH9BBWXsP3jphe1XhzeBde9IM}&sensor=true">
+</script>
+
+<script>
+  var map;
+  var geocoder;
+
+      function initialize() {
+      var bounds = new google.maps.LatLngBounds();
+      var location1 = new google.maps.LatLng(<%= @current_plant.lat1.to_json %> , <%= @current_plant.lng1.to_json %>);
+      var location2 = new google.maps.LatLng(<%= @current_plant.lat2.to_json %> , <%= @current_plant.lng2.to_json %>);
+      var location3 = new google.maps.LatLng(<%= @current_plant.lat3.to_json %> , <%= @current_plant.lng3.to_json %>);
+      var location4 = new google.maps.LatLng(<%= @current_plant.lat4.to_json %> , <%= @current_plant.lng4.to_json %>);
+      var location5 = new google.maps.LatLng(<%= @current_plant.lat5.to_json %> , <%= @current_plant.lng5.to_json %>);
+      var location6 = new google.maps.LatLng(<%= @current_plant.lat6.to_json %> , <%= @current_plant.lng6.to_json %>);
+      
+        var mapOptions = {
+          center: location1,
+      mapTypeId: google.maps.MapTypeId.HYBRID,
+      maxZoom: 16 
+        };
+    
+        map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+    google.maps.event.trigger(map, 'resize');
+    
+    var marker;
+    
+    <% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+    marker = new google.maps.Marker({
+      position: location1,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    <% if not @current_plant.lat2.blank? and not @current_plant.lng2.blank? %>
+    marker = new google.maps.Marker({
+      position: location2,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    <% if not @current_plant.lat3.blank? and not @current_plant.lng3.blank? %>
+    marker = new google.maps.Marker({
+      position: location3,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    <% if not @current_plant.lat4.blank? and not @current_plant.lng4.blank? %>
+    marker = new google.maps.Marker({
+      position: location4,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    <% if not @current_plant.lat5.blank? and not @current_plant.lng5.blank? %>
+    marker = new google.maps.Marker({
+      position: location5,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    <% if not @current_plant.lat6.blank? and not @current_plant.lng6.blank? %>
+    marker = new google.maps.Marker({
+      position: location6,
+      map: map,
+      animation: google.maps.Animation.DROP
+    })
+    
+    marker.setMap(map);
+    bounds.extend(marker.getPosition());
+    <% end %>
+    
+    map.fitBounds(bounds);
+    
+  }
+          
+   
+      google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.trigger(map, 'resize');
+    google.maps.event.addListener(map, 'click', function( event ){
+      alert( "Latitude: "+event.latLng.lat()+" "+", longitude: "+event.latLng.lng() ); 
+    });
+</script>
