added colour scheme button

--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -19,7 +19,7 @@
 					<li><i class="fa fa-list"></i>&nbsp;List</li>
 				<% end %>
 			<% else %>
-				<li><i class="fa fa-list"></i>&nbsp;List</li>
+				<li class="list-active"><i class="fa fa-list"></i>&nbsp;List</li>
 			<% end %>
 
 			<% if @view == "list" %>
@@ -27,7 +27,7 @@
 					<li><i class="fa fa-th"></i>&nbsp;Grid</li>
 				<% end %>
 			<% else %>
-				<li><i class="fa fa-th"></i>&nbsp;Grid</li>
+				<li class="list-active"><i class="fa fa-th"></i>&nbsp;Grid</li>
 			<% end %>
 
 		</ul>
