--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <% if cookies[:style] == "white" %>
+      <%= stylesheet_link_tag    "custom_white", media: "all" %>
+    <% else %>
+      <%= stylesheet_link_tag    "custom_black", media: "all" %>
+    <% end %>
     <%= stylesheet_link_tag    "application", media: "all" %>
   	<!-- Google Fonts -->
   	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
