--- a/plantsuwa/app/assets/stylesheets/custom_black.css
+++ b/plantsuwa/app/assets/stylesheets/custom_black.css
@@ -116,6 +116,8 @@ td > a {
 
 .info-tab-current, .info-tab-current:hover, .info-tab:active {
 
+  /* Orange
+
   background: #FF9112;
 
   -moz-transition: none;
@@ -123,13 +125,27 @@ td > a {
   -o-transition: color 0 ease-in;
   transition: none;
 
-  background: -webkit-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238); /* For Safari 5.1 to 6.0 */
-	background: -o-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238); /* For Opera 11.1 to 12.0 */
-	background: -moz-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238); /* Standard syntax */
+  background: -webkit-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238);
+	background: -o-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238);
+	background: -moz-linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238);
+	background: linear-gradient(#FFA238, #FF9112, #FF9112, #FFA238);
+
+  */
+
+  background: #268BFF;
+
+  -moz-transition: none;
+  -webkit-transition: none;
+  -o-transition: color 0 ease-in;
+  transition: none;
+
+  background: -webkit-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#5CA8FF, #268BFF, #268BFF, #5CA8FF); /* Standard syntax */
+  color: white;
 
 }
-
 
 
 
@@ -144,6 +160,12 @@ td > a {
 .info-tab-disabled p {
 	color: #ccc;
 }
+
+.info-tab-current > p, .info-tab:active > p {
+  color: white;
+}
+
+
 
 .action-tab {
   border-top: 1px solid #444;
