--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag "autocomplete-rails.js" %>
+
 <% if @searched %>
 	<% provide(:title, 'Results') %>
 	<% provide(:prev_page, 'Search') %>
@@ -94,3 +96,6 @@
 <%= render 'layouts/ui/bottom_tabs_default' %>
 
 
+
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
