--- a/plantsuwa/app/views/welcome/contact.html.erb
+++ b/plantsuwa/app/views/welcome/contact.html.erb
@@ -28,7 +28,7 @@
 
 
       <h2 class="contact-us-heading feedback-welcome-heading"> How can you contact us? </h2>
-      <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au, or by <a href="mailto:20938989@student.uwa.edu.au;21397806@student.uwa.edu.au;21334201@student.uwa.edu.au;20947715@student.uwa.edu.au;20505774@student.uwa.edu.au;20848476@student.uwa.edu.au;?Subject=UWA%20Plants%20Database%20query"> clicking here </a></p>
+      <p> You can email any or all of us, at [our-student-number]@student.uwa.edu.au, or by <a href="mailto:20938989@student.uwa.edu.au;21397806@student.uwa.edu.au;21334201@student.uwa.edu.au;20947715@student.uwa.edu.au;20505774@student.uwa.edu.au;20848476@student.uwa.edu.au;?Subject=UWA%20Plants%20Database%20query"> clicking here</a>.</p>
       <p> Or, if you like you can email our client, Associate Professor Catharina Sack, at <a href="mailto:tinka.sack@uwa.edu.au" target="_blank">tinka.sack@uwa.edu.au</a>.</p>
       
 
@@ -74,7 +74,3 @@
 <% end %>
 
 <%= render 'layouts/ui/bottom_tabs_default' %>
-
-
-
-
