--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -109,6 +109,7 @@ textarea.form-control {
 .info-tab-33 {
   width: 33.3333333%;
   min-width: 93.333333333px;
+  z-index: 1002;
 }
 
 .info-tab-disabled {
