--- a/plantsuwa/app/views/current_plants/_search_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_search_form.html.erb
@@ -97,15 +97,15 @@
 
 		   		<div class="row">		 
 			   		<div class="col-md-4"> 
-				   		<%= f.autocomplete_field :current_plant_family, autocomplete_current_plant_family_current_plants_path, label: false, placeholder: "Search Family", class: 'form-control kw-search-box' %>
+				   		<%= f.autocomplete_field :family, autocomplete_current_plant_family_current_plants_path, label: false, placeholder: "Search Family", class: 'form-control kw-search-box' %>
 				   		<div class="kw-search-name">Family</div>
 				   	</div>
 			   		<div class="col-md-4"> 
-			   			<%= f.autocomplete_field :current_plant_genus, autocomplete_current_plant_genus_current_plants_path, label: false, placeholder: "Search Genus", class: 'form-control kw-search-box' %>
+			   			<%= f.autocomplete_field :genus, autocomplete_current_plant_genus_current_plants_path, label: false, placeholder: "Search Genus", class: 'form-control kw-search-box' %>
 			   			<div class="kw-search-name">Genus</div>
 			   		</div>
 			   		<div class="col-md-4"> 
-			   			<%= f.autocomplete_field :current_plant_species, autocomplete_current_plant_species_current_plants_path, label: false, placeholder: "Search Species", class: 'form-control kw-search-box' %>
+			   			<%= f.autocomplete_field :species, autocomplete_current_plant_species_current_plants_path, label: false, placeholder: "Search Species", class: 'form-control kw-search-box' %>
 			   			<div class="kw-search-name">Species</div>
 			   		</div>
 		   		</div>
