--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -65,7 +65,7 @@
 	      <% end %>
 
 
-			  <li><%= link_to change_colour_scheme_path do %><i class="fa fa-adjust"></i>&nbsp;Change colour scheme<% end %></li>
+			  <li><%= link_to change_colour_scheme_path do %><i class="fa fa-adjust"></i>&nbsp;Switch colour scheme<% end %></li>
 			  <li><%= link_to contact_path do %>Contact<% end %></li>
 		  </ul>  
 		</div><!-- /.navbar-collapse -->
