--- a/plantsuwa/app/assets/stylesheets/custom_white.css
+++ b/plantsuwa/app/assets/stylesheets/custom_white.css
@@ -390,7 +390,15 @@ legend {
   border-bottom: 1px solid #ccc;
 }
 
+.index-banner > ul > a > li {
+  border: 1px solid #aaa;
+  border-radius: 3px;
+  background: #ccc;
+}
 
+.index-banner > ul > a > li:hover, .index-banner > ul > a > li:active {
+  background: #eee;
+}
 
 
 
