--- a/plantsuwa/app/assets/stylesheets/custom_black.css
+++ b/plantsuwa/app/assets/stylesheets/custom_black.css
@@ -36,7 +36,7 @@ hr {
 
 
 a {
-	color: #9E9E9E;
+	color: #BBBBBB;
 }
 
 td > a {
@@ -211,6 +211,10 @@ input {
   background: #222;
   border-color: #111;
   color: white;
+}
+
+ul > li > select {
+  color: black;
 }
 
 .form-control:focus {
@@ -478,6 +482,18 @@ p.plant-text-container {
   background: #222;
   border-bottom: 1px solid #333;
 }
+
+.index-banner > ul > a > li {
+  border: 1px solid #444;
+  border-radius: 3px;
+  background: #333;
+}
+
+.index-banner > ul > a > li:hover, .index-banner > ul > a > li:active {
+  background: #444;
+}
+
+
 
 div.dropdown-checkboxes {
   border-color: #222;
