--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -24,7 +24,7 @@
       <% end %>
 
     	<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
-    		<div class="display-photo-right" id="map-canvas" style="height: 300px"></div>
+    		<div class="display-photo-right" id="map-canvas" style="height: 300px; margin-bottom: 100px"></div>
     	<% end %>
     </div>
 
