--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
 		<% if params.has_key?(:pp_name) %>
 	    <%= link_to params[:pp_path] do %>
 	    	<div class="navbar-brand navbar-prev-page-block">
-	     		<i class="fa fa-chevron-left"></i>&nbsp;&nbsp;<%= params[:pp_name].html_safe %>
+	     		<i class="fa fa-chevron-left"></i>&nbsp;&nbsp;<%= truncate(params[:pp_name].html_safe, length: 20, escape: false) %>
 	      </div>
 	    <% end %>
 	  <% elsif !yield(:prev_page).blank? %>
@@ -65,7 +65,7 @@
 	      <% end %>
 
 
-			  <li><%= link_to change_colour_scheme_path do %><i class="fa fa-adjust"></i>&nbsp;<span class="over-992">Switch colour scheme</span><% end %></li>
+			  <li><%= link_to change_colour_scheme_path do %><i class="fa fa-adjust"></i>&nbsp;<span class="colour-scheme-992">Switch colour scheme</span><% end %></li>
 			  <li><%= link_to contact_path do %>Contact<% end %></li>
 		  </ul>  
 		</div><!-- /.navbar-collapse -->
