--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -360,16 +360,14 @@ label.checkbox {
   margin-bottom: 0px;
   margin-left: -10px;
   font-size: small;
-  margin-left: 30px;
-  position: absolute;
-  left: 100px;
-  right: 580px;
+  left: 0;
+  width: 100%;
 }
 
 
 .navbar-title-block p {
-  text-align: center;
-  width: 100%;
+  width: 43%;
+  margin-left: 90px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -384,6 +382,10 @@ label.checkbox {
   width: auto;
   padding-right: 0;
   z-index: 1100;
+  width: 120px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .navbar-uwacrest-block {
@@ -552,6 +554,12 @@ tr:nth-child(odd) td:last-child {
   transition: background 0.2s linear;
 }
 
+.list-header {
+  height: 30px;
+  padding: 5px 10px;
+  font-family: 'Montserrat', sans-serif;
+}
+
 .grid-photo-container {
   display: inline-block;
   width: 10%;
@@ -628,6 +636,13 @@ tr:nth-child(odd) td:last-child {
   text-decoration: none;
 }
 
+.no-javascript-ohdear {
+  color: black;
+  font-weight: 700;
+  background: #D66F6F;
+  padding-left: 10px;
+  padding-top: 5px;
+}
 
 
 
@@ -810,10 +825,23 @@ h3.or-block {
   .over-992 {
     display: none;
   }
-  .navbar-title-block {
-    right: 450px;
+  .navbar-title-block p {
+    width: 38%;
   }
 }
+
+@media (max-width: 900px) {
+  .navbar-title-block p {
+    width: 26%;
+  }
+}
+
+@media(max-width: 992px, min-width: 768px) {
+  .colour-scheme-992 {
+    display: none;
+  }
+}
+
 
 .under-992 {
   display: inline-block;
@@ -829,9 +857,8 @@ h3.or-block {
   .over-768 {
     display: none;  
   }
-  .navbar-title-block {
-    right: 150px;
-    left: 50px;
+  .navbar-title-block p {
+    width: 38%;
   }
 }
 
@@ -872,10 +899,6 @@ h3.or-block {
   }
   .navbar-brand-custom {
     padding-left: 18px !important;    
-  }
-
-  .navbar-title-block p {
-      right: 200px;
   }
   .under-768 {
     display: none;
