--- a/plantsuwa/app/views/current_plants/search.html.erb
+++ b/plantsuwa/app/views/current_plants/search.html.erb
@@ -1,4 +1,7 @@
-<%= javascript_include_tag "autocomplete-rails.js" %>
+<%= javascript_include_tag "jquery-ui/autocomplete", media: "all" %>
+<%= javascript_include_tag "jquery_ujs", media: "all" %>
+<%= javascript_include_tag "autocomplete-rails", media: "all" %>
+<%= stylesheet_link_tag "jquery-ui/autocomplete", media: "all" %>
 
 <% if @searched %>
 	<% provide(:title, 'Results') %>
