--- a/plantsuwa/app/views/current_plants/_current_plant.html.erb
+++ b/plantsuwa/app/views/current_plants/_current_plant.html.erb
@@ -7,8 +7,9 @@
   <div class="plant-index-box-content-wrapper">
     <div class="plant-index-box-content">
       <%= link_to current_plant_path(current_plant) do %>
-
-        <% if sort_by == "Family" %>
+        <% if sort_by == "Common Name" %>
+          <p class="plant-text-container"><strong><%= current_plant.common_name %></strong></p>
+        <% elsif sort_by == "Family" %>
           <p class="plant-text-container"><strong><%= current_plant.family.upcase %></strong></p>
         <% else %>
           <p class="plant-text-container"><strong><%= display_name(current_plant) %></strong></p>
@@ -17,7 +18,9 @@
 
       <% if !current_plant.common_name.blank? %>
         <%= link_to current_plant_path(current_plant) do %>
-          <% if sort_by == "Family" %>
+          <% if sort_by == "Common Name" %>
+            <p style="text-align: center"><%= display_name(current_plant) %></p>
+          <% elsif sort_by == "Family" %>
             <p style="text-align: center"><%= display_name(current_plant) %></p>
           <% else %>
             <p style="text-align: center"><%= current_plant.common_name %></p>
