moved jquery_tag back to where it belongs. Favourite button and log out button work fine now

--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -836,7 +836,7 @@ h3.or-block {
   }
 }
 
-@media(max-width: 992px, min-width: 768px) {
+@media(max-width: 992px) and (min-width: 768px) {
   .colour-scheme-992 {
     display: none;
   }
