--- a/plantsuwa/app/assets/stylesheets/custom_shared.css
+++ b/plantsuwa/app/assets/stylesheets/custom_shared.css
@@ -279,12 +279,13 @@ label.checkbox {
 }
 
 .plant-index-box {
-  width: 100%;
+  width: auto;
   height: 80px;
   position: relative;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
+  margin-right: 30px;
 }
 
 .plant-index-box-photo {
@@ -302,7 +303,7 @@ label.checkbox {
   height: 60px;
   width: 100%;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 60px;
   margin-top: 16px;
   white-space: nowrap;
   overflow: hidden;
@@ -557,6 +558,8 @@ tr:nth-child(odd) td:last-child {
 .list-header {
   height: 30px;
   padding: 5px 10px;
+  width: auto;
+  margin-right: 30px;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -811,7 +814,55 @@ h3.or-block {
   width: 100%;
 }
 
+.side-nav {
+  width: 30px;
+  height: auto;
+  float: right;
+  padding-top: 4px;
 
+  position: fixed;
+  right: 0;
+  top: 86px;
+  z-index: 1001;
+}
+
+.side-nav > ul {
+
+}
+
+.side-nav > ul > a > li {
+  margin-left: -35px;
+  list-style: none;
+  border-radius: 3px;
+  width: 20px;
+  text-align: center;
+  margin-bottom: 2px;
+  font-weight: 700;
+  font-size: 10px;
+}
+
+.side-nav-tiny {
+  display: none;
+}
+
+
+@media(max-height: 600px) {
+  .side-nav {
+    display: none;
+  }
+  .side-nav-tiny {
+    display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .plant-index-box {
+    margin-right: 0;
+  }
+  .list-header {
+    margin-right: 0;
+  }
+}
 
 
 
