--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -23,9 +23,7 @@
         <%= image_tag @current_plant.display_photo.url(:medium), id: 'display-photo-main', class: 'display-photo-right', style: "margin-bottom: 10px" %>
       <% end %>
 
-    	<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
-    		<div class="display-photo-right" id="map-canvas" style="height: 300px; margin-bottom: 100px"></div>
-    	<% end %>
+    	<!-- Location Map Used to be here -->
     </div>
 
     <% if not display_name(@current_plant).blank? %>
@@ -138,6 +136,13 @@
 
   <div id="tab-environmental" class="info-body" style="display: none">
     <legend>Environmental</legend>
+	
+	<div class="display-photo-right-container">
+		<% if not @current_plant.lat1.blank? and not @current_plant.lng1.blank? %>
+			<div class="display-photo-right" id="map-canvas" style="height: 300px; margin-bottom: 100px"></div>
+		<% end %>
+	</div>
+	
     <% if not @current_plant.culture.blank? %>
 	    <dt>Culture</dt><p><%= nice_format(@current_plant.culture) %></p>
     <% end %>
@@ -179,6 +184,7 @@
 		<% end %>
     <br/>
     <% end %>
+	
 	<p></p>
 	
 
@@ -360,10 +366,11 @@
 	  google.maps.event.addListener(map, 'click', function( event ){
 	    alert( "Latitude: "+event.latLng.lat()+" "+", longitude: "+event.latLng.lng() ); 
 	  });
-</script>
+
+	  </script>
 
 
-<script>
+	  <script>
 
   
 
@@ -391,6 +398,8 @@
       $('#tab-environmental').css({ display: '' });
       $('.info-tab').removeClass("info-tab-current");
       $('#btn-environmental').addClass("info-tab-current");
+	google.maps.event.trigger(map, 'resize');
+	intialize();	  
     });
   <% else %>
     $('#btn-environmental').addClass("info-tab-disabled");
