--- a/plantsuwa/app/views/current_plants/show.html.erb
+++ b/plantsuwa/app/views/current_plants/show.html.erb
@@ -361,16 +361,17 @@
 	}
           
 	 
-      google.maps.event.addDomListener(window, 'load', initialize);
-	  google.maps.event.trigger(map, 'resize');
+	  var envTab = document.getElementById('btn-environmental');
+      google.maps.event.addDomListener(envTab, 'click', initialize);
+	  
 	  google.maps.event.addListener(map, 'click', function( event ){
 	    alert( "Latitude: "+event.latLng.lat()+" "+", longitude: "+event.latLng.lng() ); 
 	  });
 
-	  </script>
+</script>
 
 
-	  <script>
+<script>
 
   
 
@@ -397,9 +398,7 @@
       $('.info-body').css({ display: 'none' });
       $('#tab-environmental').css({ display: '' });
       $('.info-tab').removeClass("info-tab-current");
-      $('#btn-environmental').addClass("info-tab-current");
-	google.maps.event.trigger(map, 'resize');
-	intialize();	  
+      $('#btn-environmental').addClass("info-tab-current");  
     });
   <% else %>
     $('#btn-environmental').addClass("info-tab-disabled");
